2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: fixed the apply format to
	numeric value in the max item report.

2013-03-06  Dario Rodriguez <dario@artica.es>

	* operation/agentes/ver_agente.php: Adapted view to support
	new vmware extensions.

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/gis_maps/render_view.php,
	operation/agentes/gis_view.php,
	godmode/gis_maps/configure_gis_map.php,
	godmode/agentes/agent_conf_gis.php, include/functions_gis.php: fixes
	about agents with white spaces.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed the delete layers.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php,include/functions_gis.php:
	cleaned source code style as the trunk.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/gis_maps/configure_gis_map.php, include/functions_gis.php,
	operation/gis_maps/render_view.php: fixes for the layers.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/gis_maps/render_view.php: fixed the mysql error
	messages when have a "none" for group in a layer.

2013-02-22  Sancho Lerena <slerena@artica.es>

        * include/api.php: Added a single protection on DoS attacks. 

2013-02-22  Dario Rodriguez <dario@artica.es>

	* godmode/servers/manage_recontask_form.php: Changed interval combo
	input for new customizable combo.

2013-02-19  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/ldap.php: Merged from trunk. Do not bind anonymously to
	  check whether the user exists.

2013-02-19  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js: Fixed str_warning and
	str_critical assignation when apply a network_component

2013-02-12  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/load_updatemanager.php
	extensions/update_manager/settings.php
	extensions/update_manager/main.php: removed binary system in 